--- a/HW0.html
+++ b/HW0.html
@@ -13,6 +13,8 @@
 <body>
 
 <script src="js/r69/three.min.js"></script>
+<script src="js/OrbitControls.js"></script>
+<script src="js/KeyboardState.js"></script>
 
 <script>
 
