--- a/HW0.html
+++ b/HW0.html
@@ -54,7 +54,7 @@
 	var floorGeometry = new THREE.PlaneGeometry(500, 500);
 	var floor = new THREE.Mesh(floorGeometry, floorMaterial);
 	floor.position.y = -25;
-	floor.rotation.x = Math.PI / 2;
+	//floor.rotation.x = Math.PI / 2;
 	scene.add(floor);
 
 	var pointLight = new THREE.PointLight (0xffffff);
