--- a/HW0.html
+++ b/HW0.html
@@ -51,7 +51,7 @@ function init()
 	
 	// FLOOR
 	var floorTexture = new THREE.ImageUtils.loadTexture( 'images/myphoto.jpg' );
-	/floorTexture.wrapS = floorTexture.wrapT = THREE.RepeatWrapping; 
+	//floorTexture.wrapS = floorTexture.wrapT = THREE.RepeatWrapping; 
 	//floorTexture.repeat.set( 4, 4 );
 	var floorMaterial = new THREE.MeshBasicMaterial( { map: floorTexture, side: THREE.DoubleSide } );
 	
