--- a/HW0.html
+++ b/HW0.html
@@ -59,6 +59,7 @@ function init()
 	var floor = new THREE.Mesh(floorGeometry, floorMaterial);
 	floor.position.y = -0.5;
 	floor.rotation.x = Math.PI / 2;
+	floor.rotation.y = Math.PI;
 	scene.add(floor);
 /*
 	var gridXZ = new THREE.GridHelper(100, 10);
