--- a/HW0.html
+++ b/HW0.html
@@ -58,7 +58,7 @@ function init()
 	var floorGeometry = new THREE.PlaneGeometry(150, 150);//, 10, 10);  // not clear what segment does
 	var floor = new THREE.Mesh(floorGeometry, floorMaterial);
 	floor.position.y = -0.5;
-	floor.rotation.y = Math.PI;
+	floor.rotation.z = Math.PI;
 	floor.rotation.x = Math.PI / 2;
 	scene.add(floor);
 /*
