--- a/HW0.html
+++ b/HW0.html
@@ -39,12 +39,12 @@ function init()
 	cube = new THREE.Mesh (new THREE.BoxGeometry (20,5,8),
 							new THREE.MeshLambertMaterial ({color: 0x1ec876}));
 
-	cube.position.set (75, 0, 0);
+	cube.position.set (-60, 0, 10);
 	scene.add (cube);
 
 	camera = new THREE.PerspectiveCamera (45, width/height, 1, 10000);
-	camera.position.y = 160;
-	camera.position.z = 400;
+	camera.position.y = 400;
+	//camera.position.z = 400;
 	camera.lookAt (new THREE.Vector3(0,0,0));
 
 	controls = new THREE.OrbitControls (camera, renderer.domElement);
@@ -55,7 +55,7 @@ function init()
 	//floorTexture.repeat.set( 4, 4 );
 	var floorMaterial = new THREE.MeshBasicMaterial( { map: floorTexture, side: THREE.DoubleSide } );
 	
-	var floorGeometry = new THREE.PlaneGeometry(150, 150);//, 10, 10);  // not clear what segment does
+	var floorGeometry = new THREE.PlaneGeometry(300, 300);//, 10, 10);  // not clear what segment does
 	var floor = new THREE.Mesh(floorGeometry, floorMaterial);
 	floor.position.y = -0.5;
 	floor.rotation.z = Math.PI;
