--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World!!
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+
+<body>
+	<h1 align="center"><font face="Bookman Old Style">I4780 - 3W3D</font>
+	</h1>
+	<h1 align="center"><font face="Bookman Old Style">Homework Set</font>
+	</h1>
+	<h1 align="center"><font face="Bookman Old Style">I4A54 曾政華</font>
+	</h1>
+	<table border="1" width="100%">
+		<tr>
+			<td width="30%">
+			<img style="display:block; margin:auto;" border="0" src="images/myphoto.jpg" width="70%" height="70%"></td>
+			<td width="30%">
+			<img style="display:block; margin:auto;" border="0" src="gifs/hw1.gif" width="70%" height="70%"></td>
+			<td width="30%">
+			<img style="display:block; margin:auto;" border="0" src="gifs/hw2.gif" width="70%" height="70%"></td>
+		</tr>
+		<tr>
+			<td width="30%">
+			<p align="center">
+			<a href="HW0.html">
+			HW0.html</a></td>
+			<td width="30%">
+			<p align="center">
+			to be continued </a></td>
+			<td width="30%">
+			<p align="center">
+			to be continued </a></td>
+		</tr>
+	</table>
+</body>
