--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 	</h1>
 	<table border="1" width="100%">
 		<tr>
-			<td width="30%">
-			<img style="display:block; margin:auto;" border="0" src="images/myphoto.jpg" width="70%" height="70%"></td>
-			<td width="30%">
-			<img style="display:block; margin:auto;" border="0" src="gifs/hw1.gif" width="70%" height="70%"></td>
-			<td width="30%">
-			<img style="display:block; margin:auto;" border="0" src="gifs/hw2.gif" width="70%" height="70%"></td>
+			<td align="center">
+			<img border="0" src="images/myphoto.jpg" width="70%"></td>
+			<td align="center">
+			<img border="0" src="gifs/hw1.gif" width="70%"></td>
+			<td align="center">
+			<img border="0" src="gifs/hw2.gif" width="70%"></td>
 		</tr>
 		<tr>
-			<td width="30%">
+			<td width="33%">
 			<p align="center">
 			<a href="HW0.html">
 			HW0.html</a></td>
-			<td width="30%">
+			<td width="33%">
 			<p align="center">
 			to be continued </a></td>
-			<td width="30%">
+			<td width="33%">
 			<p align="center">
 			to be continued </a></td>
 		</tr>
