--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 			HW0.html</a></td>
 			<td width="33%">
 			<p align="center">
-			to be continued </a></td>
+			<a href="HW1.html">
+			HW1.html</a></td>
 			<td width="33%">
 			<p align="center">
 			to be continued </a></td>
