--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 			<td width="33%">
 			<p align="center">
 			<a href="HW1.html">
-			HW1.html</a></td>
+			HW1.html</a><br/>
+			<a href="HW1(without sound).html">
+			HW1(without sound).html</a></td>
 			<td width="33%">
 			<p align="center">
 			to be continued </a></td>
