--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<td align="center">
 			<img border="0" src="images/myphoto.jpg" width="70%"></td>
 			<td align="center">
-			<img border="0" src="gifs/hw1.gif" width="70%"></td>
+			<img border="0" src="gifs/HW1.gif" width="70%"></td>
 			<td align="center">
 			<img border="0" src="gifs/hw2.gif" width="70%"></td>
 		</tr>
