--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<td align="center">
 			<img border="0" src="gifs/HW1.gif" width="70%"></td>
 			<td align="center">
-			<img border="0" src="gifs/hw2.gif" width="70%"></td>
+			<img border="0" src="gifs/HW2.gif" width="70%"></td>
 		</tr>
 		<tr>
 			<td width="33%">
@@ -31,7 +31,8 @@
 			HW1(without sound).html</a></td>
 			<td width="33%">
 			<p align="center">
-			to be continued </a></td>
+			<a href="HW2.html">
+			HW2.html</a></td>
 		</tr>
 	</table>
 </body>
