--- a/HW2.html
+++ b/HW2.html
@@ -45,7 +45,7 @@
 
 <script>
 
-var scene, camera, webGLRenderer;
+var scene, scene2, camera, webGLRenderer;
 var controls;
 var orbitcontrols;
 var clock = new THREE.Clock();
@@ -63,6 +63,7 @@ function init()
 	open = document.getElementById ('open');
 	close = document.getElementById ('close');
 	scene = new THREE.Scene();
+	scene2 = new THREE.Object3D();
 
         camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
 
@@ -181,28 +182,27 @@ function init()
 		
 		group2.position.z = -0.6;
 		
-        scene.add(cylinder11);
-        scene.add(cylinder13);
-        scene.add(cylinder21);
-        scene.add(cylinder23);
-        scene.add(b1);
-        scene.add(b2);
-        scene.add(b3);
-        scene.add(b4);
-        scene.add(group);
-        scene.add(group2);
+        scene2.add(cylinder11);
+        scene2.add(cylinder13);
+        scene2.add(cylinder21);
+        scene2.add(cylinder23);
+        scene2.add(b1);
+        scene2.add(b2);
+        scene2.add(b3);
+        scene2.add(b4);
+        scene2.add(group);
+        scene2.add(group2);
 
         //console.log(sphere2.geometry.faceVertexUvs);
 
         var floorTex = THREE.ImageUtils.loadTexture("images/floor-wood.jpg")
-        var plane = new THREE.Mesh(new THREE.BoxGeometry(200, 100, 0.1, 30), new THREE.MeshPhongMaterial({color: 0xffffff, map: floorTex}));
-        plane.position.y = -7.5;
-        plane.rotation.x = -0.5 * Math.PI;
-        scene.add(plane);
+        var gridXZ = new THREE.GridHelper(100, 10);
+		gridXZ.setColors( new THREE.Color(0xff0000), new THREE.Color(0x080808) );
+		scene.add(gridXZ);
 
         // position and point the camera to the center of the scene
         camera.position.x = 00;
-        camera.position.y = 12;
+        camera.position.y = 20;
         camera.position.z = 28;
         camera.lookAt(new THREE.Vector3(0, 0, 0));
 
@@ -213,6 +213,12 @@ function init()
         light.position.set(0, 30, 30);
         light.intensity = 0.8;
         scene.add(light);
+		
+		
+		scene2.position.x = 16;
+		scene2.position.y = 7.5;
+		scene2.position.z = 0.1;
+        scene.add(scene2);
 
 		document.body.appendChild (webGLRenderer.domElement);
 
@@ -245,11 +251,11 @@ function createMesh(geom, imageFile, bump)
 	geom.computeVertexNormals();
 
 	var mat = new THREE.MeshPhongMaterial();
-	var texture = THREE.ImageUtils.loadTexture("images/" + imageFile)
+	var texture = THREE.ImageUtils.loadTexture("images/" + imageFile);
 	mat.map = texture;
 
 	if (bump) {
-		var bump = THREE.ImageUtils.loadTexture("images/" + bump)
+		var bump = THREE.ImageUtils.loadTexture("images/" + bump);
 		mat.bumpMap = bump;
 		//mat.bumpScale = 0.2;
 	}
