--- a/index.html
+++ b/index.html
@@ -35,4 +35,28 @@
 			HW2.html</a></td>
 		</tr>
 	</table>
+	<table border="1" width="100%">
+		<tr>
+			<td align="center">
+			<img border="0" src="gifs/HW3.gif" width="70%"></td>
+			<td align="center">
+			<img border="0" src="" width="70%"></td>
+			<td align="center">
+			<img border="0" src="" width="70%"></td>
+		</tr>
+		<tr>
+			<td width="33%">
+			<p align="center">
+			<a href="HW3-1.html">
+			HW3-single tire.html</a></td>
+			<td width="33%">
+			<p align="center">
+			<a href="HW4.html">
+			</a><br/></td>
+			<td width="33%">
+			<p align="center">
+			<a href="HW5.html">
+			</a></td>
+		</tr>
+	</table>
 </body>
