--- a/HW3-1.html
+++ b/HW3-1.html
@@ -13,7 +13,6 @@
 	}
 	#info {
 		position: absolute;
-		top: 0px;
 		width: 100%;
 		text-align: center;
 		color: #ffff00
@@ -26,8 +25,7 @@
 <body>
 
 
-<div id="info">   ▲   
-    <br/> ◄ ▼ ► 
+<div id="info">▲<br/>◄▼►<br/>
 </div>
 
 <script src="js/r69/three.min.js"></script>
