--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
 			HW3.html</a></td>
 			<td width="33%">
 			<p align="center">
-			<a href="HW4.html">
-			</a><br/></td>
+			<a href="">
+			製作中，請稍後</a><br/></td>
 			<td width="33%">
 			<p align="center">
 			<a href="HW5.html">
