--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<td align="center">
 			<img border="0" src="gifs/HW3.gif" width="70%"></td>
 			<td align="center">
-			<img border="0" src="" width="70%"></td>
+			<img border="0" src="gifs/HW4.gif" width="70%"></td>
 			<td align="center">
 			<img border="0" src="" width="70%"></td>
 		</tr>
@@ -52,7 +52,7 @@
 			<td width="33%">
 			<p align="center">
 			<a href="HW4.html">
-			圖片製作中，請稍後>.^</a><br/></td>
+			HW4.html</a><br/></td>
 			<td width="33%">
 			<p align="center">
 			<a href="HW5.html">
